2008-04-02  Sven Neumann  <sven@gimp.org>

	* plug-ins/help/gimp-help-lookup.c: fixed typos in descriptions of
	the command-line options.

2008-04-02  Sven Neumann  <sven@gimp.org>

	* plug-ins/help-browser/Makefile.am (LDADD): added GIO_LIBS.

2008-04-02  Sven Neumann  <sven@gimp.org>

	* app/actions/file-actions.c: don't set a help-id on items in the
	Open Recent menu.

	* app/menus/file-menu.c (file_menu_setup): show a larger thumbnail
	in the tooltips for recently used images.

2008-04-02  Sven Neumann  <sven@gimp.org>

	* plug-ins/help/Makefile.am
	* plug-ins/help/gimphelpdomain.[ch]
	* plug-ins/help/gimphelplocale.[ch]
	* plug-ins/help/gimphelp.[ch]
	* plug-ins/help/gimp-help-lookup.c: use GIO to access the help index.
	
2008-04-01  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-title.c
	(gimp_display_shell_update_title_idle): no need to translate the
	empty string.

2008-03-31  Sven Neumann  <sven@gimp.org>

	* app/text/text-enums.[ch]
	* libgimpbase/gimpbaseenums.[ch]: as a first step towards a new
	text PDB API, moved GimpTextDirection and GimpTextJustification
	enums to libgimpbase.

	* libgimp/gimpenums.c.tail
	* tools/pdbgen/enums.pl: regenerated.

	* libgimpbase/gimpbase.def: updated.

2008-03-31  Michael Natterer  <mitch@gimp.org>

	* plug-ins/maze/*: renamed most files and added proper headers
	instead of duplicating the prototypes in each .c file that uses
	them. Indentation, spacing, formatting, some general cleanup.

2008-03-31  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpbrusheditor.c (gimp_brush_editor_notify_brush):
	Add missing code for the "spacing" property. Spotted by Jerry Baker.

2008-03-30  Martin Nordholts  <martinn@svn.gnome.org>

	* app/widgets/gimpcontainertreeview-dnd.c
	(gimp_container_tree_view_drag_drop): Make all code paths result
	in a call to gtk_drag_finish() if we return TRUE. Fixes bug
	#317992.

2008-03-30  Sven Neumann  <sven@gimp.org>
